--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.1",
+    "passport-local": "^1.0.0",
     "request": "^2.83.0"
   }
 }
