--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "express": "^4.16.2",
     "jwt-simple": "^0.5.1",
     "moment": "^2.20.1",
+    "moment-timezone": "^0.5.14",
     "mongoose": "^5.0.7",
     "morgan": "^1.9.0",
     "node-cron": "^1.2.1",
