--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "axios": "^0.18.0",
     "cors": "^2.8.4",
+    "moment": "^2.20.1",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
+    "react-datepicker": "^1.2.1",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "react-router": "^3.2.0",
