working on styling

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "cors": "^2.8.4",
     "moment": "^2.20.1",
+    "node-cron": "^1.2.1",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-datepicker": "^1.2.1",
