--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
+    "cron": "^1.3.0",
     "dotenv": "^5.0.0",
     "express": "^4.16.2",
     "jwt-simple": "^0.5.1",
@@ -24,6 +25,7 @@
     "mongoose": "^5.0.7",
     "morgan": "^1.9.0",
     "node-cron": "^1.2.1",
+    "node-schedule": "^1.3.0",
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.1",
     "passport-local": "^1.0.0",
