--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "cd frontend && npm run build --aot -prod -op ../backend/build && cd ..",
+    "start": "node backend/server.js",
+    "postinstall": "cd backend && npm install"
   },
   "repository": {
     "type": "git",
