--- a/package.json
+++ b/package.json
@@ -3,6 +3,29 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "dependencies": {
+    "axios": "^0.18.0",
+    "basic-auth": "^2.0.0",
+    "bcrypt-nodejs": "0.0.3",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
+    "cron": "^1.3.0",
+    "dotenv": "^5.0.0",
+    "express": "^4.16.2",
+    "jwt-simple": "^0.5.1",
+    "moment": "^2.20.1",
+    "moment-timezone": "^0.5.14",
+    "mongoose": "^5.0.7",
+    "morgan": "^1.9.0",
+    "node-cron": "^1.2.1",
+    "node-schedule": "^1.3.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^3.0.1",
+    "passport-local": "^1.0.0",
+    "request": "^2.83.0",
+    "twilio": "^3.11.3"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "deploy": "cd frontend && npm run build --aot -prod -op ../backend/build && cd ..",
